--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 keyboard==0.13.5
-PyAutoGUI==0.9.54
-pynput==1.7.6
+mss==9.0.1
+numpy==1.24.3
+pyautogui==0.9.54
+screeninfo==0.8.1
+win32gui==221.6
